# wizishop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  Makefile  README.md  justfile  pyproject.toml
.github/: release-please-config.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  lint.yml  release-please.yml  release.yml  tests.yml
tests/: conftest.py  test_async.py  test_client.py  test_products.py  test_skus.py
wizishop/: __init__.py  asynchronous.py  client.py  exceptions.py  mixin.py  synchronous.py  wizishop.py
wizishop/entities/: product.py  response.py  sku.py
