[project]
name = "wizishop"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]
ignore = [
    "PLR0913",  # Too many arguments in function definition
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Magic value used in comparison

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
