[project]
name = "wizishop"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.7",
    "mypy>=1.15",
    "pre-commit>=4.1",
    "pytest>=8.4",
    "python-dotenv>=1.0",
    "ruff>=0.12.0",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]
ignore = [
    "PLR0913",  # Too many arguments in function definition
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
