[project]
name = "wizishop"
# use dynamic version to avoid sync issues with uv.lock after 'release-please'
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pydantic-settings==2.14.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.13",
    "ty==0.0.35",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401", # any-type
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
disable_error_code = [
]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
